fix: scrollbars of layouts

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ body {
   padding: 0;
   margin: 0;
   @apply text-white bg-carbon-700;
+  overflow: hidden;
 }
 
 a {
